# gtk-doc

./: .cvsignore  .gitignore  .gitlab-ci.yml  .svnignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  acconfig.h  acinclude.m4  autogen.sh  bugzilla.py  configure.ac  configure.in  devhelp.xsl  devhelp2.xsd  devhelp2.xsl  git.mk  gtk-doc-fo.xsl  gtk-doc-single.xsl  gtk-doc.cat  gtk-doc.cat.in  gtk-doc.dcl  gtk-doc.doap  gtk-doc.dsl.in  gtk-doc.dtd  gtk-doc.m4  gtk-doc.make  gtk-doc.notmpl.make  gtk-doc.pc.in  gtk-doc.spec.in  gtk-doc.xsl  gtkdoc-check  gtkdoc-check.in  gtkdoc-common.pl.in  (+24 more)
.gitlab-ci/: README.md  debian.Dockerfile  run-docker.sh
buildsystems/autotools/: Makefile.am  gtk-doc.no-xslt.make  gtkdocize.in  meson.build
buildsystems/cmake/: GtkDocConfig.cmake  GtkDocConfig.cmake.in  GtkDocConfigVersion.cmake.in  GtkDocScanGObjWrapper.cmake  Makefile.am  meson.build
cmake/: GtkDocScanGObjWrapper.cmake  Makefile.am  meson.build
db2man/: README  docbook-to-man  docbook-to-man.ts
doc/: README  authors.txt  design-1.x.txt  design-2.x.txt  gnome.txt  gtk_button.txt  gtkdoc.dot  manpage  manpage.man  notes.txt  sections-file.txt  setting-up.txt  style-guide.txt
examples/: Makefile.am  README  configure.in
examples/gnome/: Makefile.am  gnome-docs.sgml  gnome-sections.txt
examples/gnomeui/: Makefile.am  gnomeui-docs.sgml  gnomeui-sections.txt  gnomeui.types
gtkdoc/: check.py  common.py  config.py  config.py.in  config_data.py.in  fixxref.py  highlight.py  md_to_db.py  meson.build  mkdb.py  mkhtml.py  mkhtml2.py  mkman.py  mkpdf.py  rebase.py  scan.py  scangobj.py
help/: Makefile.am  chapter1-intro.md  meson.build
help/manual/: .gitignore  .svnignore  ChangeLog  LINGUAS  Makefile.am  gtk-doc-manual.omf.in  meson.build  version.ent.in
help/manual/C/: .cvsignore  ChangeLog  Makefile  Makefile.am  README  fdl-appendix.xml  gtk-doc-manual-C.omf.in  gtk-doc-manual.sgml  gtk-doc-manual.xml  index.docbook
help/manual/bn_IN/: bn_IN.po
help/manual/cs/: cs.po
help/manual/de/: de.po
help/manual/el/: el.po
help/manual/en_GB/: en_GB.po
help/manual/es/: es.po  gtk-doc-manual.xml
help/manual/eu/: eu.po
help/manual/fr/: fr.po
help/manual/gl/: gl.po
help/manual/gu/: gu.po
help/manual/gu_IN/: gu.po
help/manual/hu/: hu.po
help/manual/kk/: kk.po
help/manual/pt_BR/: pt_BR.po
help/manual/sl/: sl.po
help/manual/sr/: sr.po
help/manual/sv/: sv.po
help/manual/ta/: ta.po
help/manual/te/: te.po
help/manual/zh_CN/: zh_CN.po
m4/: .svnignore  gnome-doc-utils.m4
style/: COPYING  meson.build  style.css
tests/: .gitignore  Makefile.am  annotations.sh  bugs.sh  check.py  common.py  empty.sh  fail.sh  gobject-mkhtml2.sh  gobject.sh  gtk-doc.make  gtk-doc.notmpl.make  gtkdoc-check.py  gtkdoc-common.py  gtkdoc-common.t  gtkdoc-fixxref.t  gtkdoc-mkdb.t  gtkdoc-rebase.t  gtkdoc-scan.t  gtkdocentities.ent.in  gtkdoctest.sh  highlight.py  meson.build  mk_to_db.py  mkdb.py  mkhtml2.py  program.sh  sanity.sh  scan.py  tools.sh  tools.sh.in
tests/annotations/: Makefile.am  meson.build
tests/annotations/docs/: Makefile.am  meson.build  tester-docs.xml  tester-sections.txt
tests/annotations/src/: meson.build  tester.c  tester.h
tests/bugs/: Makefile.am
tests/bugs/docs/: Makefile.am  Makefile.in  meson.build  tester-docs.xml  tester-sections.txt
tests/bugs/src/: Makefile.am  meson.build  tester.c  tester.h
tests/empty/: Makefile.am
tests/empty/docs/: Makefile.am  meson.build
tests/empty/src/: meson.build  tester.c  tester.h
tests/fail/docs/: Makefile.am  meson.build  tester-docs.xml  tester-sections.txt
tests/fail/docs/xml/: meson.build
tests/fail/src/: Makefile.am  meson.build  tester.c  tester.h
tests/gobject/: Makefile.am  meson.build
tests/gobject-mkhtml2/: Makefile.am  meson.build
tests/gobject-mkhtml2/docs/: Makefile.am  meson.build
tests/gobject/docs/: Makefile.am  Makefile.in  meson.build  tester-docs.sgml  tester-docs.xml  tester-sections.txt  tester.types
tests/gobject/docs-tmpl/: Makefile.am  tester-docs.xml  tester-sections.txt  tester.types
tests/gobject/docs/images/: meson.build
tests/gobject/examples/: gobject.c
tests/gobject/src/: Makefile.am  giface.c  giface.h  gobject.c  gobject.h  gtypes.c  gtypes.h  meson.build  tester.c  tester.h
tests/helpers/: gtkdoc_check_runner.py  gtkdoc_fixxref_runner.py  gtkdoc_mkdb_runner.py  gtkdoc_mkhtml2_runner.py  gtkdoc_mkhtml_runner.py  gtkdoc_scan_runner.py  gtkdoc_scangobj_runner.py  meson.build
tests/program/: Makefile.am
tests/program/docs/: Makefile.am  meson.build  tester-docs.xml
tests/program/src/: Makefile.am  meson.build  test-program.c
tests/repro/docs/: Makefile.am  meson.build  tester-docs.xml
tests/repro/src/: meson.build  tester.c  tester.h
tools/: c10e-html.py  db2html.py  db2md.py  docpercentages.pl  git-pre-commit  gtk-doc.el  migratetmpl.pl
tools/templates/: book.html  common.html  index.html  refentry.html
