## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS=-I m4 ${ACLOCAL_FLAGS}

SUBDIRS = cmake help tests

bin_SCRIPTS = \
	gtkdoc-check    \
	gtkdoc-depscan  \
	gtkdoc-fixxref  \
	gtkdoc-mkdb     \
	gtkdoc-mkhtml   \
	gtkdoc-mkman    \
	gtkdoc-mkpdf    \
	gtkdoc-rebase   \
	gtkdoc-scan     \
	gtkdoc-scangobj \
	gtkdocize

gtkdocdatadir = $(datadir)/gtk-doc/data
gtkdocdata_DATA = \
	gtkdoc-common.pl	\
	gtk-doc.xsl		\
	version-greater-or-equal.xsl \
	devhelp2.xsd		\
	devhelp2.xsl		\
	gtk-doc.make		\
	gtk-doc.flat.make	\
	style/home.png			\
	style/left.png			\
	style/left-insensitive.png		\
	style/right.png		\
	style/right-insensitive.png		\
	style/up.png			\
	style/up-insensitive.png		\
	style/style.css

pkgconfigdir = $(datadir)/pkgconfig
pkgconfig_DATA = gtk-doc.pc

aclocaldir = $(datadir)/aclocal
aclocal_DATA = gtk-doc.m4

gtk-doc.flat.make: gtk-doc.make
	@$(SED) -e "s/EXTRA_DIST =/EXTRA_DIST +=/" $< >$@

EXTRA_DIST = \
	MAINTAINERS     \
	$(gtkdocdata_DATA) \
	gtk-doc.pc.in   \
	gtk-doc.m4      \
	gtk-doc.doap \
	gtk-doc-fo.xsl     \
	doc/README            \
	doc/authors.txt       \
	doc/gnome.txt         \
	doc/sections-file.txt \
	doc/setting-up.txt    \
	doc/style-guide.txt   \
	examples/README       \
	examples/Makefile.am  \
	tools/docpercentages.pl \
	tools/gtk-doc.el \
	COPYING-DOCS

CLEANFILES = \
  gtk-doc.flat.make \
  gtkdoc-checkc \
  gtkdoc-depscanc \
  gtkdoc-mkhtmlc \
  gtkdoc-mkmanc \
  gtkdoc-mkpdfc \
  gtkdoc-rebasec

DISTCLEANFILES = \
  gtkdoc-check \
  gtkdoc-common.pl \
  gtkdoc-depscan \
  gtkdoc-fixxref \
  gtkdocize \
  gtkdoc-mkdb \
  gtkdoc-mkhtml \
  gtkdoc-mkman \
  gtkdoc-mkpdf \
  gtk-doc.pc \
  gtkdoc-rebase \
  gtkdoc-scangobj \
  gtkdoc-scan


MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
	INSTALL \
	RELNOTES.txt \
	ChangeLog-?.?? \
	gtk-doc-*.tar.xz \
	build-aux

-include $(top_srcdir)/git.mk

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		  echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
